# not-minecraft

./: .gitignore  CMakeLists.txt  Makefile
cmake/: dependencies.cmake  utils.cmake
src/: engine.cpp  main.cpp  vk.cpp
